# open-crypto-checkout

./: .dockerignore  .gitignore  Cargo.toml  README.md  ocrch-config.example.toml  plan.md
.github/workflows/: docker-publish.yml
.sqlx/: query-039baaedfa246488e9afec915785335f896f49752d7a6587b47791d216c5c9ae.json  query-0bf50a05934a73aa1baf57c32bd19184ccb89029104bdfc31ddd694ee9a649d8.json  query-10b37b31beff071b9930444586de6cb65d7fbe5076dd11479a08dbddb548617b.json  query-129aafdc5b4c77b0c57c2f2b9ae4edd449dde106068e6ffd6a68434c913eb1af.json  query-19ca6efb21d1873f50af64bd2d6d3da503aeeb2b05af2a7d776e1d58c5797b42.json  query-1abead942bcc678dffaec9b3c7bc101bc69bc667ecce14d68e1d426aee859fae.json  query-214a4bcae8090cac220b3ffe4f28071f3a7b858a2dc25c9ae05b67b6479886eb.json  query-2db9190ffffb28573c961151441014b0ac219e1005ac46333af6ed7e35c23920.json  query-475c287adb84d8906f56164ea5b48e366f7d402a58d9f422bbb6ec5377504423.json  query-47a282688e4c680ef2e32f7048584c6c1fcb2af52a31f10839b3aa90cb4a79c8.json  query-49ed95be55cbfc871704d9550d0e46988f9c135b871d8efd95b4cc1e8f90db3b.json  query-5ca756f18234a2c8012168ad6baf34612e1faf876486506f20d47accaaacc1ec.json  query-71dfbad899e9b975b19bb7ff12a40472c9d4c504478a27d8cf29a0125ccf1305.json  query-74c85e6beeb116e0d22164e9a816f84621815c1792c82174c74511c1d0d26d8b.json  query-7ab5a91249e04da1a79e1344e53fc71c444d99f7a731c2b983faff53b9b152df.json  query-824a8cde34789a538eb4ac65bcc02afce896b82bbc63191772af98f60a781fe0.json  query-82e3d768fd9d5ebe2fb5202acd6c80ebbde33f124547ef3ab8693f23a7ba3de1.json  query-9588365f0d98aa7892e5e63ad0509391ebee101ef2367cfd54a1b75faa6a2c78.json  query-9744728b56e4f5af62481b34822ac15b9ab10f5c1841dca4e362bc96ba163c96.json  query-988d376623c4c2227966773d8038ea9741b9e42fceac68cc5f29302fd64d1c7f.json  query-9d53b00781c130563add1ee1a1b3cad472d9bbbe7027dde2c1e6a87609422936.json  query-9f2bee584e78797649163125a23ea093ca2e640b198a219b2b52c860f9b94aa1.json  query-b27e239c423eca5f20b38217b3f13d5a80e62956bfe265d86c134453f248509c.json  query-b394621eb04679102f0618ae0477f4db0eed9c9b05cd1a9275bb859b70e2706f.json  query-bc2538b4983c0d908529b419947df4059cf335dd338d69af5a2289f4ad1342fd.json  query-c45594e8d400e4725e476055f991db19b3debc68cfbfc02983c1ccc134ffd069.json  query-c4db57a5f0bfba5ebb62b1c89dd44313c0b297eeb72ddb9e1655fcdd853a8fc0.json  query-c89abc33ddc2ac6739c349c389d59ac6ddc170e69d8b95b8bafaf63cc657eee1.json  query-c8fd55e73fe8f4a04c2f324cbbc25414ede642adf56bf9bbc078045affd915f5.json  query-cb37eaa017b2a080a7862a82b10a1d5e19c03a0af2c0f704758f305957ec1def.json  query-cd39308137d8fd7fb781b24dfb2090921ba9546c92dd8cc28a7bb7ce3552f5da.json  query-dc1f7d13ed91059862c2322f75aab806638867abf8bbc7a25c212f69b15f3819.json  query-f68cab70f28d9d97f273c070a9ea3c476900ad8e4daac47e88ad3b1c84497bb5.json  query-f7e0c4072dbf63a2e73b94c3e1caee414d54dbd613989fcfbf71539d0daf9e69.json  query-fb0360b6c23c789f581dee6cd5b99e49610c25a5ad347fe42516a4a5d7d1ace1.json  query-fded19e540426bf09fadd0291c33f7aba82645120b4a29b42b8332a383bc8f61.json  query-fe6507da482ccafd01742c9e3920bd13b0553d59c5a66bc24b99d5c507e66f8d.json  query-feb34bb150de5a3ebc6179cee7e3edcbc8fc5b5abede2b8204e6c79e77301e0d.json
doc/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml
doc/src/content/docs/: index.mdx
doc/src/content/docs/guides/: configuration.md  deploy-systemd.md  deploy-systemd.mdoc  frontend.md  webhooks.md
doc/src/content/docs/quick-start/: docker.md  docker.mdoc  introduction.md
doc/src/content/docs/reference/: admin-api.md  authentication.md  service-api.md  user-api.md
migrations/: 20260204051922_initialize_core_tables.down.sql  20260204051922_initialize_core_tables.up.sql  20260204060433_create_transfer_sync_cursor_view.down.sql  20260204060433_create_transfer_sync_cursor_view.up.sql
ocrch-core/: Cargo.toml
ocrch-core/src/: framework.rs  lib.rs
ocrch-core/src/config/: api_keys.rs  config_store.rs  merchant.rs  mod.rs  server.rs  wallet.rs
ocrch-core/src/entities/: erc20_pending_deposit.rs  erc20_transfer.rs  mod.rs  order_records.rs  trc20_pending_deposit.rs  trc20_transfer.rs
ocrch-core/src/events/: channels.rs  mod.rs  types.rs
ocrch-core/src/processors/: blockchain_sync.rs  mod.rs  order_watcher.rs  pooling_manager.rs  webhook_sender.rs
ocrch-core/src/utils/: mod.rs  pooling_interval.rs
ocrch-sdk/: Cargo.toml
ocrch-sdk/src/: lib.rs  signature.rs
ocrch-sdk/src/client/: admin.rs  mod.rs  service.rs  user.rs  webhook.rs  ws.rs
ocrch-sdk/src/config/: admin.rs  merchant.rs  mod.rs  wallet.rs
ocrch-sdk/src/objects/: admin.rs  blockchains.rs  create_payment.rs  mod.rs  user.rs  webhook.rs  ws.rs
ocrch-server/: Cargo.toml  Dockerfile
ocrch-server/src/: main.rs  server.rs  shutdown.rs  state.rs
ocrch-server/src/api/: extractors.rs  mod.rs  service.rs  user.rs
ocrch-server/src/api/admin/: list_deposits.rs  list_orders.rs  list_transfers.rs  mark_paid.rs  mod.rs  resend_order_webhook.rs  resend_transfer_webhook.rs  show_wallets.rs
ocrch-server/src/api/user/: cancel_order.rs  chains.rs  create_payment.rs  get_order_status.rs  mod.rs  ws.rs
ocrch-server/src/config/: file.rs  mod.rs  runtime.rs
