[workspace]
resolver = "3"
members = ["ocrch-core","ocrch-sdk"]

[workspace.dependencies]
# Runtime
tokio = { version = "1.49", features = ["full"] }
tokio-stream = "0.1"
lazy_static = "1.5"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Framework
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "time",
    "derive",
    "macros",
    "uuid",
    "rust_decimal",
    "json",
] }
redis = { version = "1.0", features = ["tokio-comp", "uuid", "json"] }
axum = { version = "0.8", features = ["macros", "form"] }
tower = "0.5"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "zstd", "deflate"] }


# Serialization & Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
fast32 = "1.0.3"
bytes = "1.10"

# Data Types
uuid = { version = "1.19", features = ["serde", "v4", "v7"] }
rust_decimal = { version = "1.37", features = ["rkyv"] }
compact_str = { version = "0.9.0", features = [
    "serde",
    "sqlx-postgres",
    "bytes",
    "smallvec",
] }
time = { version = "0.3", features = ["serde", "serde-human-readable"] }
url = { version = "2.5", features = ["serde"] }
smallvec = { version = "1.14.0", features = [
    "serde",
    "union",
    "const_generics",
    "const_new",
] }

# Security
rand = "0.9"
ring = "0.17"
sha2 = "0.10"
