[package]
name = "ocrch-core"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
sqlx = { workspace = true }
ocrch-sdk = { path = "../ocrch-sdk" }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
time = { workspace = true }
url = { workspace = true }

