[package]
name = "ocrch-sdk"
version = "0.1.0"
edition = "2024"

[features]
client = ["dep:reqwest"]

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = { workspace = true }
fast32 = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
compact_str = { workspace = true }
time = { workspace = true }
url = { workspace = true }
ring = { workspace = true }
reqwest = { workspace = true, optional = true }

# Security
argon2 = "0.5"
rand = { workspace = true }